--- a/clash.yaml
+++ b/clash.yaml
@@ -334,6 +334,7 @@ Proxy Group:
       - NanTong
       - HangZhou
       - LongLong
+      - Singapore
 
   - name: UnblockNeteaseMusic
     type: select
@@ -348,6 +349,7 @@ Rule:
   - DOMAIN,www.percyz.com,Proxy
   - DOMAIN,docker.percyz.com,Proxy
   - DOMAIN,panel.percyz.com,Proxy
+  - DOMAIN-SUFFIX,115.com,Proxy
 
 
 # Unblock Netease Music
