--- a/clash.yaml
+++ b/clash.yaml
@@ -362,17 +362,25 @@ Proxy Group:
 
 
 Rule:
+
+# 自定义规则
+  ## 您可以在此处插入您补充的自定义规则（请注意保持缩进）
+
+###  *******  START  *******  ###
+
 # Percy
+  - DOMAIN,panel.percyz.com,DIRECT
+  - DOMAIN,drive.percyz.com,DIRECT
+  - DOMAIN,docker.percyz.com,DIRECT
   - DOMAIN,www.percyz.com,Proxy
   - DOMAIN,docker.percyz.cn,Proxy
   - DOMAIN,panel.percyz.cn,Proxy
 
-
-
-
 # Unblock Netease Music
   - DOMAIN-SUFFIX,163.com,UnblockNeteaseMusic
   - DOMAIN-SUFFIX,126.net,UnblockNeteaseMusic
+
+###  *******  END  *******  ###
 
 # Apple
   - DOMAIN,safebrowsing.urlsec.qq.com,DIRECT # 如果您并不信任此服务提供商或防止其下载消耗过多带宽资源，可以进入 Safari 设置，关闭 Fraudulent Website Warning 功能，并使用 REJECT 策略。
@@ -397,10 +405,6 @@ Rule:
   - DOMAIN-SUFFIX,apple.com,DIRECT
   - DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
   # - DOMAIN,e.crashlytics.com,REJECT //注释此选项有助于大多数App开发者分析崩溃信息；如果您拒绝一切崩溃数据统计、搜集，请取消 # 注释。
-
-
-# 自定义规则
-  ## 您可以在此处插入您补充的自定义规则（请注意保持缩进）
 
 # 国内网站
   - DOMAIN-SUFFIX,cn,DIRECT
