--- a/clash.yaml
+++ b/clash.yaml
@@ -263,19 +263,15 @@ Proxy:
 
 
   # 网易云
-  - name: "Android-SG"
-    type: http
-    server: music.percyz.com
-    port: 5600
-    # tls: true
-    # skip-cert-verify: true
 
-  - name: "IOS-SG"
-    type: http
-    server: music.percyz.com
-    port: 5500
-    # tls: true
-    # skip-cert-verify: true
+  - name: "Unblock-Sin"
+    type: vmess
+    server: 3.0.114.109
+    port: 48080
+    uuid: 5089221a-b958-11ea-b3de-0242ac130004
+    alterId: 32
+    cipher: auto
+
 
   - name: "Unblock-Mel"
     type: vmess
@@ -363,8 +359,7 @@ Proxy Group:
     type: select
     proxies:
       - DIRECT
-      - Android-SG
-      - IOS-SG
+      - Unblock-Sin
       - Unblock-Mel
 
 
