--- a/clash.yaml
+++ b/clash.yaml
@@ -396,6 +396,7 @@ Proxy Group:
       - DIRECT
       - Singapore
       - Melbourne
+      - LongLong
       - CDN_1
       - CDN_2
       - CDN_3
