--- a/clash.yaml
+++ b/clash.yaml
@@ -74,6 +74,20 @@ proxies:                                           # 自建节点列表
     network: ws
     ws-path: /cyberpunk2077                        # ★★websocket路径，替换为你自己的
 
+  # ★V2ray 自建节点3   ★Vmess+TLS+Websocket 方式
+  - name: "🇦🇺 澳洲节点"                                # 节点名，与下方组设置一致，否则报错
+    type: vmess                                    # 节点类型
+    server: www.percyz.com                           # ★★服务器，替换为你自己的
+    port: 443
+    uuid: 785ef0df-d612-ff7c-f00a-5facda890cd8  # ★★UUID，替换为你自己的
+    alterId: 32
+    cipher: auto
+    udp: true
+    tls: true
+    skip-cert-verify: false
+    network: ws
+    ws-path: /cyberpunk                              # ★★websocket路径，替换为你自己的
+
 
 proxy-groups:                                   # 代理组列表
 
@@ -82,7 +96,7 @@ proxy-groups:                                   # 代理组列表
     proxies:                                    # 代理节点（组）列表
       - "🇭🇰 香港节点"                               # 节点名  与上方设置一致，否则报错
       - "🇭🇰 香港备用"                               # 节点名，与上方设置一致，否则报错
-      # - V2ray01                                 # 节点名，与上方设置一致，否则报错
+      - "🇦🇺 澳洲节点"                                # 节点名，与上方设置一致，否则报错
 
 
 # ★第四部分，规则配置
