备用节点更新

--- a/clash.yaml
+++ b/clash.yaml
@@ -44,14 +44,14 @@ dns:
 
 
 # ★第三部分，代理配置
-#############################################★注意，★★替换
-proxies:                                           # 自建节点列表
+######################################################★注意，★★替换
+proxies:                                             # 自建节点列表
   # ★V2ray 自建节点 1  ★Vmess+TLS+Websocket 方式
-  - name: "🇭🇰 香港节点"                                # 节点名，与下方组设置一致，否则报错
-    type: vmess                                    # 节点类型
+  - name: "🇭🇰 香港节点"                               # 节点名，与下方组设置一致，否则报错
+    type: vmess                                      # 节点类型
     server: mock.percyz.cn                           # ★★服务器，替换为你自己的
     port: 443
-    uuid: 3c8c03c8-a3b6-4948-ba58-d2d757500740  # ★★UUID，替换为你自己的
+    uuid: 3c8c03c8-a3b6-4948-ba58-d2d757500740       # ★★UUID，替换为你自己的
     alterId: 32
     cipher: auto
     udp: true
@@ -61,25 +61,39 @@ proxies:                                           # 自建节点列表
     ws-path: /cyberpunk                              # ★★websocket路径，替换为你自己的
 
   # ★V2ray 自建节点 2  ★Vmess+TLS+Websocket 方式
-  - name: "🇭🇰 香港备用"                                # 节点名，与下方组设置一致，否则报错
-    type: vmess                                    # 节点类型
-    server: kaneki.doomo.club                            # ★★服务器，替换为你自己的
+  - name: "🇭🇰 香港备用"                               # 节点名，与下方组设置一致，否则报错
+    type: vmess                                      # 节点类型
+    server: kaneki.doomo.club                        # ★★服务器，替换为你自己的
     port: 443
-    uuid: 0448cd9e-e41e-45ad-9699-fe02e73c5591   # ★★UUID，替换为你自己的
+    uuid: 0448cd9e-e41e-45ad-9699-fe02e73c5591       # ★★UUID，替换为你自己的
     alterId: 5
     cipher: auto
     udp: true
     tls: true
     skip-cert-verify: false
     network: ws
-    ws-path: /cyberpunk2077                        # ★★websocket路径，替换为你自己的
+    ws-path: /cyberpunk2077                          # ★★websocket路径，替换为你自己的
 
   # ★V2ray 自建节点3   ★Vmess+TLS+Websocket 方式
-  - name: "🇦🇺 澳洲节点"                                # 节点名，与下方组设置一致，否则报错
-    type: vmess                                    # 节点类型
+  - name: "🇦🇺 澳洲节点"                               # 节点名，与下方组设置一致，否则报错
+    type: vmess                                      # 节点类型
+    server: cyber.percyz.com                         # ★★服务器，替换为你自己的
+    port: 443
+    uuid: fbb45052-21a8-345c-e3e2-13c47065f0ce       # ★★UUID，替换为你自己的
+    alterId: 32
+    cipher: auto
+    udp: true
+    tls: true
+    skip-cert-verify: false
+    network: ws
+    ws-path: /punk2077                               # ★★websocket路径，替换为你自己的
+
+  # ★V2ray 自建节点4   ★Vmess+TLS+Websocket 方式
+  - name: "🇦🇺 澳洲备用"                               # 节点名，与下方组设置一致，否则报错
+    type: vmess                                      # 节点类型
     server: www.percyz.com                           # ★★服务器，替换为你自己的
     port: 443
-    uuid: 785ef0df-d612-ff7c-f00a-5facda890cd8  # ★★UUID，替换为你自己的
+    uuid: 785ef0df-d612-ff7c-f00a-5facda890cd8       # ★★UUID，替换为你自己的
     alterId: 32
     cipher: auto
     udp: true
@@ -89,14 +103,15 @@ proxies:                                           # 自建节点列表
     ws-path: /cyberpunk                              # ★★websocket路径，替换为你自己的
 
 
-proxy-groups:                                   # 代理组列表
+proxy-groups:                                      # 代理组列表
 
-  - name: "🔰 节点选择"                              # ★组名，包含下面的（节点/组）
-    type: select                                # select 表示手动切换，默认proxies第一个
-    proxies:                                    # 代理节点（组）列表
+  - name: "🔰 节点选择"                             # ★组名，包含下面的（节点/组）
+    type: select                                   # select 表示手动切换，默认proxies第一个
+    proxies:                                       # 代理节点（组）列表
       - "🇭🇰 香港节点"                               # 节点名  与上方设置一致，否则报错
       - "🇭🇰 香港备用"                               # 节点名，与上方设置一致，否则报错
-      - "🇦🇺 澳洲节点"                                # 节点名，与上方设置一致，否则报错
+      - "🇦🇺 澳洲节点"                               # 节点名，与上方设置一致，否则报错
+      - "🇦🇺 澳洲备用"                               # 节点名，与上方设置一致，否则报错
 
 
 # ★第四部分，规则配置
