--- a/clash.yaml
+++ b/clash.yaml
@@ -77,7 +77,7 @@ proxies:                                             # 自建节点列表
   # ★V2ray 自建节点3   ★Vmess+TLS+Websocket 方式
   - name: "🇦🇺 澳洲节点"                               # 节点名，与下方组设置一致，否则报错
     type: vmess                                      # 节点类型
-    server: cyber.percyz.com                         # ★★服务器，替换为你自己的
+    server: cyber.percyz.cn                          # ★★服务器，替换为你自己的
     port: 443
     uuid: fbb45052-21a8-345c-e3e2-13c47065f0ce       # ★★UUID，替换为你自己的
     alterId: 32
