--- a/clash.yaml
+++ b/clash.yaml
@@ -151,7 +151,21 @@ proxies:                                             # 自建节点列表
     network: ws
     ws-path: /cyberpunk2077                          # ★★websocket路径，替换为你自己的
 
-  # ★V2ray 自建节点3   ★Vmess+TLS+Websocket 方式
+  # ★V2ray 自建节点 3  ★Vmess+TLS+Websocket 方式
+  - name: "🇰🇷 韩国节点"                               # 节点名，与下方组设置一致，否则报错
+    type: vmess                                      # 节点类型
+    server: korea-ss.percyz.cn                       # ★★服务器，替换为你自己的
+    port: 443
+    uuid: b74c2c31-fabc-20ad-d33d-9501292d66a3       # ★★UUID，替换为你自己的
+    alterId: 32
+    cipher: auto
+    udp: true
+    tls: true
+    skip-cert-verify: false
+    network: ws
+    ws-path: /Cyberpunk-2077                         # ★★websocket路径，替换为你自己的  
+
+  # ★V2ray 自建节点4   ★Vmess+TLS+Websocket 方式
   - name: "🇦🇺 澳洲节点"                               # 节点名，与下方组设置一致，否则报错
     type: vmess                                      # 节点类型
     server: cyber.percyz.cn                          # ★★服务器，替换为你自己的
@@ -165,7 +179,7 @@ proxies:                                             # 自建节点列表
     network: ws
     ws-path: /punk2077                               # ★★websocket路径，替换为你自己的
 
-  # ★V2ray 自建节点4   ★Vmess+TLS+Websocket 方式
+  # ★V2ray 自建节点5   ★Vmess+TLS+Websocket 方式
   - name: "🇦🇺 澳洲备用"                               # 节点名，与下方组设置一致，否则报错
     type: vmess                                      # 节点类型
     server: www.percyz.com                           # ★★服务器，替换为你自己的
@@ -187,9 +201,10 @@ proxy-groups:                                      # 代理组列表
     proxies:                                       # 代理节点（组）列表
       - "🇭🇰 香港节点"                               # 节点名  与上方设置一致，否则报错
       - "🇭🇰 香港备用"                               # 节点名，与上方设置一致，否则报错
+      - "🇰🇷 韩国节点"                               # 节点名，与上方设置一致，否则报错
       - "🇦🇺 澳洲节点"                               # 节点名，与上方设置一致，否则报错
       - "🇦🇺 澳洲备用"                               # 节点名，与上方设置一致，否则报错
-
+ 
 
 # ★第四部分，规则配置
 ###规则集来自★Loyalsoldier★大神
